<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" android:background="#ffffff">
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/object_url"
		        
		        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#000000" android:layout_marginLeft="5dp" android:layout_marginTop="10dp"/>
		
		    <TextView
		        android:id="@+id/objecturi"
		        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>
		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/size"
		        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#000000" android:layout_marginLeft="5dp" android:layout_marginTop="10dp" android:layout_marginBottom="5dp"/>
		
		    <TextView
		        android:id="@+id/size"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>
		
		    <TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/type"
		        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5dp" android:textColor="#000000" android:layout_marginTop="10dp" android:layout_marginBottom="5dp"/>
		
		    <TextView
		        android:id="@+id/type"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>
		
		    <TextView
		        android:id="@+id/textView8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/name"
		        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#000000" android:layout_marginLeft="5dp" android:layout_marginTop="10dp" android:layout_marginBottom="5dp"/>
		
		    <TextView
		        android:id="@+id/name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>
		
		    <TextView
		        android:id="@+id/textView10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/vendor"
		        
		        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5dp" android:textColor="#000000" android:layout_marginTop="10dp" android:layout_marginBottom="5dp"/>
		
		    <TextView
		        android:id="@+id/vendor"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>
		
		    <TextView
		        android:id="@+id/textView12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/description"
		        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#000000" android:layout_marginLeft="5dp" android:layout_marginTop="10dp" android:layout_marginBottom="5dp"/>
		
		    <TextView
		        android:id="@+id/descrition"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>
		
		    <TextView
		        android:id="@+id/textView14"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/install_notify_url"
		        
		        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#000000" android:layout_marginLeft="5dp" android:layout_marginTop="10dp" android:layout_marginBottom="5dp"/>
		
		    <TextView
		        android:id="@+id/installNotifyUrl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        
		        android:text="@string/text_view" android:layout_marginLeft="15dp" android:textColor="#000000"/>

		    <RelativeLayout
		        android:id="@+id/relativeLayout1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" android:layout_marginTop="10dp">

		        <Button
		            android:id="@+id/button2"
		            android:layout_width="100dp"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_marginRight="20dp"
		            android:text="@string/ok" />

		        <Button
		            android:id="@+id/button1"
		            android:layout_width="100dp"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:text="@string/cancelar" android:layout_marginLeft="20dp"/>

		    </RelativeLayout>
		
		</LinearLayout>

</ScrollView>